force-app/main/default/objects/Score__c/fields/Rounds__c.field-meta.xml
<CustomField>
    <fullName>Rounds__c</fullName>
    <label>Rounds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>