force-app/main/default/objects/Score__c/fields/Seconds__c.field-meta.xml
<CustomField>
    <fullName>Seconds__c</fullName>
    <label>Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>