force-app/main/default/objects/Score__c/fields/Strength_Reps__c.field-meta.xml
<CustomField>
    <fullName>Strength_Reps__c</fullName>
    <label>Strength Reps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>