force-app/main/default/objects/Score__c/fields/Strength_Type__c.field-meta.xml
<CustomField>
    <fullName>Strength_Type__c</fullName>
    <label>Strength Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>