force-app/main/default/objects/Score__c/fields/Workout_Date__c.field-meta.xml
<CustomField>
    <fullName>Workout_Date__c</fullName>
    <formula>Workout__r.Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workout Date</label>
    <type>Date</type>
</CustomField>