force-app/main/default/objects/Score__c/recordTypes/AMRAP.recordType-meta.xml
<RecordType>
    <fullName>AMRAP</fullName>
    <active>true</active>
    <label>AMRAP</label>
</RecordType>