force-app/main/default/objects/Score__c/recordTypes/For_Time.recordType-meta.xml
<RecordType>
    <fullName>For_Time</fullName>
    <active>true</active>
    <label>For Time</label>
</RecordType>